# jnp1-organism

./: .clang-format  .gitignore  CMakeLists.txt  organism.h  organism_example.cc  readme.md  test.cpp
